[gd_scene load_steps=6 format=3 uid="uid://bprdm2kuleux2"]

[ext_resource type="Theme" uid="uid://d4lygjei3ld2f" path="res://themes/gothic_scenario.tres" id="1_s3l0n"]
[ext_resource type="Script" path="res://scenarios/leipzig/garden/Garden.gd" id="2_707uv"]
[ext_resource type="PackedScene" uid="uid://bdtq7xo1dfigb" path="res://scenarios/aa_instanced_scenes/FadePanel.tscn" id="3_7jo5a"]
[ext_resource type="PackedScene" uid="uid://d3bii8k8584d" path="res://scenarios/aa_instanced_scenes/TextBox.tscn" id="4_op1t0"]
[ext_resource type="PackedScene" uid="uid://dna4je6f4puhp" path="res://scenarios/aa_instanced_scenes/Audio.tscn" id="5_8fy6b"]

[node name="Garden" type="TextureRect"]
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
theme = ExtResource("1_s3l0n")
script = ExtResource("2_707uv")

[node name="FadePanel" parent="." instance=ExtResource("3_7jo5a")]
visible = false
layout_mode = 0

[node name="TextBox" parent="." instance=ExtResource("4_op1t0")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1210.0
offset_bottom = 263.0

[node name="Time" type="Label" parent="TextBox"]
layout_mode = 2

[node name="Intro" type="Label" parent="TextBox"]
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
text = "You are in a peaceful garden between Leipzig's monastery and church. Monks quietly tend to the grounds as you..."
autowrap_mode = 2

[node name="Options" type="VBoxContainer" parent="TextBox"]
layout_mode = 2

[node name="PassTime" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...sit in silence and enjoy the tranquility, arising when the next bell tolls."
flat = true
alignment = 0

[node name="LatinQuarter" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...leave and reemerge into the Latin Quarter."
flat = true
alignment = 0

[node name="Outcome" type="Label" parent="TextBox"]
layout_mode = 2

[node name="Audio" parent="." instance=ExtResource("5_8fy6b")]

[connection signal="pressed" from="TextBox/Options/LatinQuarter" to="." method="_on_latin_quarter_pressed"]
